--- a/src/views/signup.ejs
+++ b/src/views/signup.ejs
@@ -1,116 +1,103 @@
 <%- include('includes/header') %>
-<link rel="stylesheet" type="text/css" href="/css/signup.css" />
+  <link rel="stylesheet" type="text/css" href="/css/signup.css" />
 
-<body>
-  <div class="container">
-    <div class="forms-container">
-      <div class="signin-signup">
+  <body>
+    <div class="container">
+      <div class="forms-container">
+        <div class="signin-signup">
 
-        <!-- SIGN IN FORM -->
-        <form action="/admin/login" method="POST" class="sign-in-form">
-          <h2 class="title">Sign in</h2>
-          <div class="input-field">
-            <i class="fas fa-user"></i>
-            <input type="text" name="memberNick" placeholder="Nickname" required />
-          </div>
-          <div class="input-field">
-            <i class="fas fa-lock"></i>
-            <input type="password" name="memberPassword" placeholder="Password" required />
-          </div>
-          <input type="submit" value="Login" class="btn solid" />
-          <p class="social-text">Or Sign in with social platforms</p>
-          <div class="social-media">
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-google"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-          </div>
-        </form>
+          <!-- SIGN IN FORM -->
+          <form action="/admin/login" method="POST" class="sign-in-form">
+            <h2 class="title">Sign in</h2>
+            <div class="input-field">
+              <i class="fas fa-user"></i>
+              <input type="text" name="memberNick" placeholder="Nickname" required />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" name="memberPassword" placeholder="Password" required />
+            </div>
+            <input type="submit" value="Login" class="btn solid" />
+          </form>
 
-        <!-- SIGN UP FORM -->
-        <form action="/admin/signup" method="POST" class="sign-up-form" onsubmit="return validateForm()">
-          <h2 class="title">Sign up</h2>
-          <div class="input-field">
-            <i class="fas fa-user"></i>
-            <input type="text" name="memberNick" class="member-nick" placeholder="Nickname" required />
-          </div>
-          <div class="input-field">
-            <i class="fas fa-envelope"></i>
-            <input type="text" name="memberPhone" class="member-phone" placeholder="Phone" required />
-          </div>
-          <div class="input-field">
-            <i class="fas fa-lock"></i>
-            <input type="password" name="memberPassword" class="member-password" placeholder="Password" required />
-          </div>
-          <div class="input-field">
-            <i class="fas fa-lock"></i>
-            <input type="password" name="confirmPassword" class="confirm-password" placeholder="Repeat password" required />
-          </div>
-          <input type="submit" class="btn" value="Sign up" />
-          <p class="social-text">Or Sign up with social platforms</p>
-          <div class="social-media">
-            <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-google"></i></a>
-            <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
-          </div>
-        </form>
+          <!-- SIGN UP FORM -->
+          <form action="/admin/signup" method="POST" class="sign-up-form" onsubmit="return validateForm()">
+            <h2 class="title">Sign up</h2>
+            <div class="input-field">
+              <i class="fas fa-user"></i>
+              <input type="text" name="memberNick" class="member-nick" placeholder="Nickname" required />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-envelope"></i>
+              <input type="text" name="memberPhone" class="member-phone" placeholder="Phone" required />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" name="memberPassword" class="member-password" placeholder="Password" required />
+            </div>
+            <div class="input-field">
+              <i class="fas fa-lock"></i>
+              <input type="password" name="confirmPassword" class="confirm-password" placeholder="Repeat password"
+                required />
+            </div>
+            <input type="submit" class="btn" value="Sign up" />
+          </form>
 
+        </div>
+      </div>
+
+      <div class="panels-container">
+        <div class="panel left-panel">
+          <div class="content">
+            <h3>New here?</h3>
+            <p>Bilim olishning erta kechi yo'q!</p>
+            <button class="btn transparent" id="sign-up-btn">Sign up</button>
+          </div>
+          <img src="https://i.ibb.co/6HXL6q1/Privacy-policy-rafiki.png" class="image" alt="Signup image" />
+        </div>
+        <div class="panel right-panel">
+          <div class="content">
+            <h3>One of us?</h3>
+            <p>Bilim olishning erta kechi yo'q!</p>
+            <button class="btn transparent" id="sign-in-btn">Sign in</button>
+          </div>
+          <img src="https://i.ibb.co/nP8H853/Mobile-login-rafiki.png" class="image" alt="Login image" />
+        </div>
       </div>
     </div>
 
-    <div class="panels-container">
-      <div class="panel left-panel">
-        <div class="content">
-          <h3>New here?</h3>
-          <p>Bilim olishning erta kechi yo'q!</p>
-          <button class="btn transparent" id="sign-up-btn">Sign up</button>
-        </div>
-        <img src="https://i.ibb.co/6HXL6q1/Privacy-policy-rafiki.png" class="image" alt="Signup image" />
-      </div>
-      <div class="panel right-panel">
-        <div class="content">
-          <h3>One of us?</h3>
-          <p>Bilim olishning erta kechi yo'q!</p>
-          <button class="btn transparent" id="sign-in-btn">Sign in</button>
-        </div>
-        <img src="https://i.ibb.co/nP8H853/Mobile-login-rafiki.png" class="image" alt="Login image" />
-      </div>
-    </div>
-  </div>
+    <script>
+      const sign_in_btn = document.querySelector("#sign-in-btn");
+      const sign_up_btn = document.querySelector("#sign-up-btn");
+      const container = document.querySelector(".container");
 
-  <script>
-    const sign_in_btn = document.querySelector("#sign-in-btn");
-    const sign_up_btn = document.querySelector("#sign-up-btn");
-    const container = document.querySelector(".container");
+      sign_up_btn.addEventListener("click", () => {
+        container.classList.add("sign-up-mode");
+      });
 
-    sign_up_btn.addEventListener("click", () => {
-      container.classList.add("sign-up-mode");
-    });
+      sign_in_btn.addEventListener("click", () => {
+        container.classList.remove("sign-up-mode");
+      });
 
-    sign_in_btn.addEventListener("click", () => {
-      container.classList.remove("sign-up-mode");
-    });
+      function validateForm() {
+        let memberNick = document.querySelector(".member-nick").value;
+        let memberPhone = document.querySelector(".member-phone").value;
+        let memberPassword = document.querySelector(".member-password").value;
+        let confirmPassword = document.querySelector(".confirm-password").value;
 
-    function validateForm() {
-      let memberNick = document.querySelector(".member-nick").value;
-      let memberPhone = document.querySelector(".member-phone").value;
-      let memberPassword = document.querySelector(".member-password").value;
-      let confirmPassword = document.querySelector(".confirm-password").value;
+        if (!memberNick || !memberPhone || !memberPassword || !confirmPassword) {
+          alert("Fill in all required inputs");
+          return false;
+        }
 
-      if (!memberNick || !memberPhone || !memberPassword || !confirmPassword) {
-        alert("Fill in all required inputs");
-        return false;
+        if (memberPassword !== confirmPassword) {
+          alert("Passwords do not match, please check again");
+          return false;
+        }
+
+        return true;
       }
+    </script>
 
-      if (memberPassword !== confirmPassword) {
-        alert("Passwords do not match, please check again");
-        return false;
-      }
-
-      return true;
-    }
-  </script>
-
-  <script type="text/javascript" src="/js/signup.js"></script>
-<%- include('includes/footer') %>
+    <script type="text/javascript" src="/js/signup.js"></script>
+    <%- include('includes/footer') %>
